2023 Day 9 to 12 - holiday was good; I didn't want to score points anyway; random refactor of prev days; more refactor to come